# marEx

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  run_ci_tests.sh  run_coverage.sh  run_coverage_local.sh  run_coverage_parallel.sh  sitecustomize.py
.github/workflows/: README.md  ci.yml  performance.yml  release.yml  tests.yml  tests.yml.bak  validate.py
docs/: Makefile  api.rst  concepts.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  quickstart.rst  requirements-docs.txt  troubleshooting.rst  user_guide.rst  why_marex.rst
docs/_autosummary/: marEx.ConfigurationError.rst  marEx.CoordinateError.rst  marEx.DataValidationError.rst  marEx.DependencyError.rst  marEx.MarExError.rst  marEx.PlotConfig.rst  marEx.ProcessingError.rst  marEx.TrackingError.rst  marEx.VisualisationError.rst  marEx.compute_normalised_anomaly.rst  marEx.configure_logging.rst  marEx.create_coordinate_error.rst  marEx.create_data_validation_error.rst  marEx.create_processing_error.rst  marEx.detect.identify_extremes.rst  marEx.detect.preprocess_data.rst  marEx.get_installation_profile.rst  marEx.get_logger.rst  marEx.get_verbosity_level.rst  marEx.has_dependency.rst  marEx.helper.configure_dask.rst  marEx.helper.fix_dask_tuple_array.rst  marEx.helper.get_cluster_info.rst  marEx.helper.start_local_cluster.rst  marEx.identify_extremes.rst  marEx.is_quiet_mode.rst  marEx.is_verbose_mode.rst  marEx.preprocess_data.rst  marEx.print_dependency_status.rst  marEx.regional_tracker.rst  marEx.rolling_climatology.rst  marEx.set_normal_logging.rst  marEx.set_quiet_mode.rst  marEx.set_verbose_mode.rst  marEx.smoothed_rolling_climatology.rst  marEx.specify_grid.rst  marEx.track.regional_tracker.rst  marEx.tracker.rst  marEx.wrap_exception.rst
docs/modules/: detect.rst  helper.rst  plotx.rst  track.rst
docs/modules/plotx/: base.rst  gridded.rst  unstructured.rst
examples/batch jobs/: run_detect.py  run_track.py  submit_track.sh
examples/gridded data/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb  04_genealogy_analysis.ipynb
examples/postprocessing/: genealogy_analysis.ipynb
examples/regional data/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
examples/unstructured data/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb  03_visualise_events.ipynb
marEx/: __init__.py  _coverage_init.py  _dependencies.py  detect.py  exceptions.py  genealogy.py  helper.py  logging_config.py  track.py
marEx/plotX/: __init__.py  base.py  gridded.py  unstructured.py
tests/: 02_id_track_events.ipynb  __init__.py  conftest.py  coverage_config.py  make_test_data.ipynb  test_detect_detrending.py  test_detect_helpers.py  test_detect_units.py  test_error_handling.py  test_exceptions.py  test_genealogy.py  test_gridded_preprocessing.py  test_gridded_tracking.py  test_integration.py  test_logging_system.py  test_plotx.py  test_track_edge_cases.py  test_track_helpers.py  test_track_units.py  test_unstructured_preprocessing.py  test_unstructured_tracking.py
tests/data/extremes_gridded.zarr/: .zattrs  .zmetadata
tests/data/extremes_gridded.zarr/extreme_events/: .zarray  .zattrs  0.0.0  1.0.0  10.0.0  11.0.0  12.0.0  13.0.0  14.0.0  15.0.0  2.0.0  3.0.0  4.0.0  5.0.0  6.0.0  7.0.0  8.0.0  9.0.0
tests/data/extremes_gridded.zarr/lat/: .zarray  .zattrs  0
tests/data/extremes_gridded.zarr/lon/: .zarray  .zattrs  0
tests/data/extremes_gridded.zarr/mask/: .zarray  .zattrs  0.0
tests/data/extremes_gridded.zarr/time/: .zarray  .zattrs  0  3
tests/data/extremes_gridded_blob.zarr/: .zattrs  .zmetadata
tests/data/extremes_gridded_blob.zarr/extreme_events/: .zarray  .zattrs  0.0.0  0.0.1  0.1.0  0.1.1  1.0.0  1.0.1  1.1.0  1.1.1  2.0.0  7.0.0
tests/data/extremes_gridded_blob.zarr/lat/: .zarray
tests/data/extremes_gridded_blob.zarr/lon/: .zarray  .zattrs
tests/data/extremes_gridded_blob.zarr/mask/: .zarray  .zattrs
tests/data/extremes_gridded_blob.zarr/time/: 1  2  3
tests/data/extremes_unstructured.zarr/: .zattrs  .zgroup  .zmetadata
tests/data/extremes_unstructured.zarr/cell_areas/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/dat_anomaly/: .zarray  .zattrs  0.0  1.0  10.0  100.0  101.0  102.0  103.0  104.0  105.0  106.0  107.0  108.0  109.0  11.0  110.0  111.0  112.0  113.0  114.0  115.0  116.0  117.0  118.0  119.0  12.0  120.0  121.0  122.0  123.0  124.0  125.0  126.0  127.0  128.0  129.0  13.0  130.0  131.0  (+328 more)
tests/data/extremes_unstructured.zarr/extreme_events/: .zarray  .zattrs  0.0  1.0  10.0  100.0  101.0  102.0  103.0  104.0  105.0  106.0  107.0  108.0  109.0  11.0  110.0  111.0  112.0  113.0  114.0  115.0  116.0  117.0  118.0  119.0  12.0  120.0  121.0  122.0  123.0  124.0  125.0  126.0  127.0  128.0  129.0  13.0  130.0  131.0  (+328 more)
tests/data/extremes_unstructured.zarr/lat/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/lon/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/mask/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/neighbours/: .zarray  .zattrs  0.0
tests/data/extremes_unstructured.zarr/nv/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/thresholds/: .zarray  .zattrs  0
tests/data/extremes_unstructured.zarr/time/: .zarray  .zattrs  0
tests/data/extremes_unstructured_merging.zarr/: .zmetadata
tests/data/extremes_unstructured_merging.zarr/cell_areas/: .zattrs  0
tests/data/extremes_unstructured_merging.zarr/dat_anomaly/: .zattrs
tests/data/extremes_unstructured_merging.zarr/extreme_events/: 0.0
tests/data/extremes_unstructured_merging.zarr/lat/: .zattrs
tests/data/extremes_unstructured_merging.zarr/neighbours/: .zattrs
tests/data/extremes_unstructured_merging.zarr/time/: .zattrs
tests/data/sst_gridded.zarr/: .zmetadata
tests/data/sst_gridded.zarr/lat/: .zarray  .zattrs  0
tests/data/sst_unstructured.zarr/: .zmetadata
tests/old/: 01_preprocess_extremes.ipynb  02_id_track_events.ipynb
(+2866 files in other folders)
